# FActScore

./: .gitignore  README.md  pyproject.toml  requirements.txt  roberta_stopwords.txt
factscore/: atomic_facts.py  clm.py  download_data.py  factscorer.py  lm.py  npm.py  openai_lm.py  retrieval.py
preprocessing/: postprocess_acl.py  preprocess_acl.py  preprocess_acl_kb.py
