[tool.poetry]
name = "factscore"
version = "0.1.0"
description = "FactScore is an automatic evaluation metric for factual precision in long-form text generation. It uses large language models and retrieval to break down generations into atomic facts and then measure the correctness with respect to a knowledge source (like Wikipedia)."
authors = ["Sewon Min <sewon@cs.washington.edu>", "Kalpesh Krishna <kalpesh@cs.umass.edu>", "Xinxi Lyu <alrope@cs.washington.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.13.0"
sentence-transformers = "^2.2.2"
transformers = "^4.29.2"
pysqlite3 = "^0.5.0"
openai = "^0.27.7"
rank-bm25 = "^0.2.2"
spacy = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
